# teensy4-rs-template-ethernet

./: Cargo.toml  README.md
scripts/: udp_client_input.py  udp_client_profile.py
src/: ethernet.rs  main.rs
